# fastcommit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README_CN.md
.github/workflows/: ci.yml  format.yml  release.yml
docs/: TEXT_WRAPPING.md  github-pr-integration.md  sanitizer.md
src/: animation.rs  cli.rs  config.rs  constants.rs  generate.rs  main.rs  pr.rs  sanitizer.rs  template_engine.rs  update_checker.rs
src/text_wrapper/: hybrid_wrapper.rs  mod.rs  text_wrapper.rs  types.rs
