[package]
name = "fastcommit"
version = "0.1.2"
description = "AI-based command line tool to quickly generate standardized commit messages."
edition = "2021"
authors = ["longjin <fslongjin@vip.qq.com>"]
license = "MIT"
repository = "https://github.com/fslongjin/fastcommit"
keywords = ["fastcommit", "conventional-commits", "AI"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.26"
openai_api_rust = { git = "https://github.com/fslongjin/openai-api", rev = "e2a3f6f" }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
