[package]
name = "fastcommit"
version = "0.7.2"
description = "AI-based command line tool to quickly generate standardized commit messages."
edition = "2021"
authors = ["longjin <fslongjin@vip.qq.com>"]
license = "MIT"
repository = "https://github.com/fslongjin/fastcommit"
keywords = ["fastcommit", "conventional-commits", "AI"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
dirs = "6.0.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
log = "0.4.26"
openai_api_rust = { git = "https://github.com/fslongjin/openai-api", rev = "e2a3f6f" }
regex = "1.11.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8.5"
indicatif = "0.17.8"
toml = "0.8.20"
unicode-width = "0.2.0"
terminal_size = "0.4.0"
